# crypto-trading-alerts

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  RELATORIO_FINAL.md  SECURITY.md  config.example.json  config.yaml  crypto_alerts_updated.py  performance_optimizations.py  portfolio.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily-alerts.yml
crypto_alerts/: __init__.py  __main__.py  advisor.py  cli.py  config.py  engine.py  http.py  market.py  models.py  news.py  notify.py  openai_advisor.py  policy.py  report.py  state.py  universe.py
tests/: test_advisor.py  test_binance_market.py  test_cli.py  test_config.py  test_dynamic_cli.py  test_engine.py  test_http.py  test_market.py  test_news.py  test_notify.py  test_openai_advisor.py  test_policy.py  test_state.py  test_universe.py
